# rootmap

./: .env.example  .gitignore  Cargo.toml  INSTRUCOES.txt  README.md  docker-compose.yml  setup.sh  test_e2e.sh
docs/: ARCHITECTURE.md  TCC_STATUS_E_O_QUE_FALTA.md
examples/: inventory.yaml
migrations/: 001_init.sql
src/: cli.rs  config.rs  main.rs  models.rs  report.rs
src/analysis/: impact.rs  incident.rs  mod.rs  path.rs
src/collectors/: docker.rs  linux.rs  mod.rs  ports.rs  systemd.rs
src/graph/: neo4j.rs
src/output/: ascii.rs  mod.rs  table.rs
src/storage/: sqlite.rs
